@@ -1,11 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Youri-Config
-version:      v0.1.1
-version_from: lib/Youri/Config.pm
-installdirs:  site
+--- #YAML:1.0
+name:               Youri-Config
+version:            0.2.1
+abstract:           ~
+author:
+    - Youri project <youri@zarb.org>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    YAML::AppConfig:               0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+    YAML::AppConfig:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
